--- a/teaching/calc2/power-series/index.html
+++ b/teaching/calc2/power-series/index.html
@@ -16,7 +16,7 @@ title: Power series
         Auburn University at Montgomery
     </p>
 </section>
-<section>
+<section data-audio-src="1-1.mp3">
     <h3>Motivations</h3>
     <p>
         We studied geometric series of the form
@@ -25,21 +25,21 @@ title: Power series
         \]
         and we now know exactly for which $r$ this series will converge.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="1-2.mp3">
         A natural question to ask is then:
         Can we treat $r$ as a variable?
         And will that produce a function?
         This is what power series is all about.
     </p>
 </section>
-<section>
+<section data-audio-src="2-1.mp3">
     <h3>Power series</h3>
 
     <p>
         They are expressions that look like
         polynomials with <em>infinitely</em> many terms.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="2-2.mp3">
         A <b>power series centered at $x=0$</b> (or about $x=0$)
         is an expression 
         \[
@@ -48,7 +48,7 @@ title: Power series
         \]
         where $c_0,c_1,c_2,\ldots$ are real constants known as <b>coefficients</b>.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="2-3.mp3">
         For example, the following expressions are power series (about $x=0$):
         \begin{align*}
             &1 + x + x^2 + x^3 + x^4 + \cdots \\
@@ -57,7 +57,7 @@ title: Power series
         \end{align*}
     </p>
 </section>
-<section>
+<section data-audio-src="3-1.mp3">
     <h3>Nonexamples</h3>
     <p>
         In a power series in the variable $x$ (about $x=0$),
@@ -72,7 +72,7 @@ title: Power series
         \end{align*}
     </p>
 </section>
-<section>
+<section data-audio-src="4-1.mp3">
 
     <p>
     In general, a <b>power series centered at</b> 
@@ -84,12 +84,12 @@ title: Power series
     for some real constants (the coefficients)
     $c_0,c_1,c_2,\ldots$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="4-2.mp3">
         Simply put, a power series is an infinite series
-        in which each term has a <em>nonnegative</em> power of an variable
+        in which each term has a <em>nonnegative integer</em> power of a variable
         (or a variable minus a number).
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="4-3.mp3">
         For example, the expression
         \[
             1 + (x - 3) + (x-3)^2 + (x-3)^3 + (x-3)^4 + \cdots
@@ -97,7 +97,7 @@ title: Power series
         is a power series centered at $x=3$.
     </p>
 </section>
-<section>
+<section data-audio-src="5-1.mp3">
     <h3>Does a power series define a function?</h3>
     <p>
         Keep in mind that we may <em>not</em> be able to 
@@ -105,8 +105,8 @@ title: Power series
         <!-- --- as we know by now, not all series have meaningful values. -->
         This is the question of <em>convergence</em>.
     </p>
-    <p class="fragment">
-        It is clear that a power series $\sum_{k=1}^\infty c_k(x-a)^k$ 
+    <p class="fragment" data-audio-src="5-2.mp3">
+        It is clear that a power series $\sum_{k=0}^\infty c_k(x-a)^k$ 
         always converges at its center $x=a$:
         If we "plug in" $x=a$, we get
         \[
@@ -115,14 +115,14 @@ title: Power series
             = c_0.
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="5-3.mp3">
         An important question we need to study is that
         given a power series centered at $x=a$,
-        are there any other value we can plug in for $x$
+        are there any other values we can plug in for $x$
         and get a convergent series (and hence a meaningful value)?
     </p>
 </section>
-<section>
+<section data-audio-src="6-1.mp3">
     <h3>Radius of convergence</h3>
     <p>
         Each power series centered at $x=a$
@@ -135,26 +135,26 @@ title: Power series
         A power series $\sum_{k=0}^\infty c_k (x-a)^k$
         has three possibilities:
         <ol>
-            <li class="fragment"> 
+            <li class="fragment" data-audio-src="6-2.mp3"> 
                 This series converges only at $x=a$ and diverges for all other $x$ values.
-                In this case, we say this series has a <b>radius of converges</b> of 0.
+                In this case, we say this series has a <b>radius of convergence</b> of 0.
             </li>
-            <li class="fragment"> 
+            <li class="fragment" data-audio-src="6-3.mp3"> 
                 This series converges for all $x$ values.
-                In this case, we say this series has a <b>radius of converges</b> of $\infty$.
+                In this case, we say this series has a <b>radius of convergence</b> of $\infty$.
             </li>
-            <li class="fragment">
-                There exists a real $R > 0$ such that this series\ldots
+            <li class="fragment" data-audio-src="6-4.mp3">
+                There exists a real number $R > 0$ such that this series...
                 <ul>
                     <li> converges for all $x$ such that $|x - a| < R$, and</li>
                     <li> diverges  for all $x$ such that $|x - a| > R$.
                 </ul>
-                We call $R$ the <b>radius of converges</b> of this series.
+                We call $R$ the <b>radius of convergence</b> of this series.
             </li>
         </ol>
     </p></div>
 </section>
-<section>
+<section data-audio-src="7-1.mp3">
     <h3>An example</h3>
     <p>
         Consider the power series
@@ -163,14 +163,14 @@ title: Power series
         \]
         centered at $x=0$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="7-2.mp3">
         From what we know about geometric series,
         we can see this series converges if and only if $|x| < 1$.
         Since the center is $x=0$,
         we can conclude that the radius of convergence is 1.
     </p>
 </section>
-<section>
+<section data-audio-src="8-1.mp3">
     <h3>Another example</h3>
     <p>
         Consider the power series
@@ -179,23 +179,23 @@ title: Power series
         \]
         centered at $x=1$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="8-2.mp3">
         This is a geometric series 
         $\sum_{k=0}^\infty a r^k$
         with $a = \frac{1}{3}$ and $r = 2(x-1)$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="8-3.mp3">
         We know such a series converges if and only if $|r| < 1$,
         i.e., $|2(x-1)| < 1$.
         This is equivalent to
         \[
             |x-1| < 1/2.
         \]
-        Since the center is $x=-1$,
+        Since the center is $x=1$,
         this inequality states that the radius of convergence is $1/2$.
     </p>
 </section>
-<section>
+<section data-audio-src="9-1.mp3">
     <h3>Yet another example</h3>
     <p>
         Consider the power series
@@ -204,7 +204,7 @@ title: Power series
         \]
         centered at $x=0$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="9-2.mp3">
         We will apply the <em>ratio test</em> here
         by computing the limit of the ratio between two consecutive terms:
         \[
@@ -215,24 +215,24 @@ title: Power series
         \]
         for any given $x$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="9-3.mp3">
         By the ratio test,
         we can conclude that this series converges for any given $x$ value.
         Therefore the radius of convergence is $\infty$.
     </p>
 </section>
-<section>
+<section data-audio-src="10-1.mp3">
     <p>
         The set of real numbers for which
         the series converge form a interval,
         and it is called the <b>interval of convergence</b> of the power series.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="10-2.mp3">
         Within this interval of convergence,
         power series having the same center <em>can be manipulated algebraically</em>,
-        e.g., the can be added, and multiplied.
+        e.g., they can be added, and multiplied.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="10-3.mp3">
         For example,
         \begin{align*}
             \sum_{k=0} b_k (x-a)^k
@@ -247,7 +247,7 @@ title: Power series
     </p>
 
 </section>
-<section>
+<section data-audio-src="11-1.mp3">
     <h3>Power series as functions</h3>
     <p>
         When the interval of convergence consists of more than one number,
@@ -256,11 +256,11 @@ title: Power series
         Indeed, we can show that all derivatives
         of this function exists and are continuous in that interval.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="11-2.mp3">
         This also means, within their interval of convergence,
         power series can be differentiated and integrated <em>term by term</em>.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="11-3.mp3">
         \[
             \frac{d}{dx} \sum_{k=0}^\infty c_k (x-a)^k
             =
@@ -269,7 +269,7 @@ title: Power series
             \sum_{k=1}^\infty c_k k (x-a)^{k-1}
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="11-4.mp3">
         \[
             \int \sum_{k=0}^\infty c_k (x-a)^k
             =
@@ -278,26 +278,26 @@ title: Power series
             \sum_{k=0}^\infty c_k \frac{(x-a)^{k+1}}{k+1}
         \]
     </p>
-    <p></p>
 
 </section>
-<section>
+<section data-audio-src="12-1.mp3">
     <h3>Analytic functions</h3>
 
     <p>
-        Functions given by power series are called are called <b>analytic functions</b>.
+        Functions given by power series are called <b>analytic functions</b>.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="12-2.mp3">
         Many familiar functions in calculus are analytic. For Example,
         \begin{align*}
-            e^t &= \sum_{k=0}^\infty \frac{t^k}{k!} &
-            \ln(1+t) &= \sum_{k=1}^\infty \frac{ (-1)^{k-1} }{k} t^k &
+            e^x &= \sum_{k=0}^\infty \frac{x^k}{k!} &
+            \ln(1+x) &= \sum_{k=1}^\infty \frac{ (-1)^{k-1} }{k} x^k &
             \\
-            \cos(t) &= \sum_{k=0}^\infty \frac{(-1)^k t^{2k}}{(2k)!} &
-            \sin(t) &= \sum_{k=0}^\infty \frac{(-1)^k t^{2k+1}}{(2k+1)!}
+            \cos(x) &= \sum_{k=0}^\infty \frac{(-1)^k x^{2k}}{(2k)!} &
+            \sin(x) &= \sum_{k=0}^\infty \frac{(-1)^k x^{2k+1}}{(2k+1)!}
         \end{align*}
+        (we will learn how to compute them soon.)
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="12-3.mp3">
         Historically, power series are the main weapons for mathematicians for a long time.
         It is likely that mathematicians thought that all "reasonable" functions are analytic.
         This assumption turn out to be quite wrong.
